update(): update base,inputs

--- a/index.html
+++ b/index.html
@@ -29,11 +29,28 @@
 
 
 		<main class="container-main">
-			<div class="container-side"></div>
+			<div class="container-side">
+				<h4 class="margin-bottom-medium">Dashboard</h4>
+				<ul class="menu">
+					<li><a href="#">Donec vestibulum</a></li>
+					<li><a href="#">Ligula pulvinar</a></li>
+					<li><a href="#">Aliquet efficitur</a></li>
+				</ul>
+				<h4 class="margin-bottom-medium">Dashboard</h4>
+				<ul class="menu">
+					<li><a href="#">Donec vestibulum</a></li>
+					<li><a href="#">Ligula pulvinar</a></li>
+					<li><a href="#">Aliquet efficitur</a></li>
+				</ul>
+			</div>
 
 			<div class="container-page">
 				<div class="container-page-head">
 					<h1 class="page-title">Dashboard</h1>
+					<div class="container-search">
+						<i class="material-icons">search</i>
+						<input type="text" name="" value="" placeholder="Rechercher un projet...">
+					</div>
 				</div>
 				<div class="container-page-content">
 
@@ -61,6 +78,9 @@
 					<div class="module-container">
 						<div class="module-head">
 							<h2 class="module-title">New project</h2>
+							<div class="module-actions">
+								<button class="item"><i class="material-icons">more_horiz</i></button>
+							</div>
 						</div>
 						<div class="module-content">
 							<div class="inputs">
