update(): update inputs

--- a/index.html
+++ b/index.html
@@ -142,6 +142,18 @@
 						</div>
 					</div>
 
+					<div class="module-container">
+						<div class="module-head">
+							<h2 class="module-title">Agenda</h2>
+							<div class="module-actions">
+								<button class="item"><i class="material-icons">more_horiz</i></button>
+							</div>
+						</div>
+						<div class="module-content">
+							
+						</div>
+					</div>
+
 				</div><!-- ./page-content -->
 			</div><!-- ./page -->
 
