update(core): update html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 			</div>
 		</div>
 
-
 		<main class="container-main">
 			<div class="container-side">
 				<h4 class="margin-bottom-medium">Dashboard</h4>
@@ -54,103 +53,261 @@
 				</div>
 				<div class="container-page-content">
 
-					<div class="module-container">
-						<div class="module-content">
-							<h2>Paper time!</h2>
-							<p>This's a conceptual CRM PROJECT. It helps users to better manage the teams, projects & clients, generate reports and keep them up to date.</p>
+					<div class="modules-row">
+						<div class="module-container">
+							<div class="module-content">
+								<h2>Paper time!</h2>
+								<p>This's a conceptual CRM PROJECT. It helps users to better manage the teams, projects & clients, generate reports and keep them up to date.</p>
+							</div>
+						</div>
+					</div>
+					<div class="modules-row">
+						<div class="module-container">
+							<div class="module-head">
+								<h2 class="module-title">CRM - Management System</h2>
+								<div class="module-actions">
+									<a href="#" class="item"><i class="material-icons">cloud_download</i></a>
+									<button class="item"><i class="material-icons">more_horiz</i></button>
+								</div>
+							</div>
+							<div class="module-content">
+								<p>This's a conceptual CRM PROJECT. It helps users to better manage the teams, projects & clients, generate reports and keep them up to date.</p>
+								<button class="button">S'inscrire avec une adresse e-mail</button>
+							</div>
+						</div>
+					</div>
+					<div class="modules-row">
+						<div class="module-container">
+							<div class="module-head">
+								<h2 class="module-title">Agenda</h2>
+								<div class="module-actions">
+									<a href="" class="button">add new event</a>
+									<button class="item"><i class="material-icons">more_horiz</i></button>
+								</div>
+							</div>
+							<div class="module-content">
+
+								<div class="wrap-actions-agenda">
+									<div class="select-user">
+										<select class="select-select2" name="">
+											<option value="">--</option>
+											<option value="">Julien</option>
+											<option value="">Louis</option>
+											<option value="">Sophie</option>
+										</select>
+									</div>
+								</div>
+
+								<div class="wrap-agenda">
+									<div class="header-agenda">
+										<ul class="metas-dates">
+											<li class="day current">
+												<span class="meta-date-name">Lundi</span>
+												<span class="meta-date-number">13.05</span>
+											</li>
+											<li class="day">
+												<span class="meta-date-name">Mardi</span>
+												<span class="meta-date-number">14.05</span>
+											</li>
+											<li class="day">
+												<span class="meta-date-name">Mercredi</span>
+												<span class="meta-date-number">15.05</span>
+											</li>
+											<li class="day">
+												<span class="meta-date-name">Jeudi</span>
+												<span class="meta-date-number">16.05</span>
+											</li>
+											<li class="day">
+												<span class="meta-date-name">Vendredi</span>
+												<span class="meta-date-number">17.05</span>
+											</li>
+											<li class="day">
+												<span class="meta-date-name">Samedi</span>
+												<span class="meta-date-number">18.05</span>
+											</li>
+											<li class="day">
+												<span class="meta-date-name">Dimanche</span>
+												<span class="meta-date-number">19.05</span>
+											</li>
+										</ul>
+									</div>
+									<div class="body-agenda">
+										<ul class="metas-columns">
+											<li class="day current">
+												<div class="event">
+													<div class="content">
+														<span class="meta-title">Zapier Platform</span>
+														<span class="meta-hours">10:00 - 12:00</span>
+														<span class="meta-message">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
+													</div>
+													<div class="handler"></div>
+												</div>
+												<div class="event">
+													<div class="content">
+														<span class="meta-title">Blog - Paper time</span>
+														<span class="meta-hours">14:00 - 18:00</span>
+													</div>
+													<div class="handler"></div>
+												</div>
+											</li>
+											<li class="day"></li>
+											<li class="day"></li>
+											<li class="day"></li>
+											<li class="day"></li>
+											<li class="day day-off">
+												<div class="event">
+													<div class="content">
+														<span class="meta-title">Meeting</span>
+														<span class="meta-hours">08:00 - 10:00</span>
+														<span class="meta-place">@room</span>
+													</div>
+													<div class="handler"></div>
+												</div>
+											</li>
+											<li class="day day-off"></li>
+										</ul>
+									</div>
+								</div>
+
+							</div>
+						</div>
+					</div>
+					<div class="modules-row">
+						<div class="module-container">
+							<div class="module-head">
+								<h2 class="module-title">Users</h2>
+								<div class="module-actions">
+									<a href="" class="button">add new user</a>
+									<button class="item"><i class="material-icons">more_horiz</i></button>
+								</div>
+							</div>
+							<div class="module-content">
+
+								<div class="wrap-list">
+									<div class="item logged">
+										<div class="status noshrink"></div>
+										<div class="avatar noshrink">
+											<div class="user-avatar">
+												<img src="assets/images/user-001.jpg" alt="">
+											</div>
+										</div>
+										<div class="email">julien@billiotte.fr</div>
+										<div class="name">Julien Miclo</div>
+										<div class="role">administrator</div>
+										<div class="created_at">12/04/2019 20:34</div>
+										<div class="ip">82.226.104.119</div>
+									</div>
+									<div class="item nologged">
+										<div class="status noshrink"></div>
+										<div class="avatar noshrink">
+											<div class="user-avatar">
+												<img src="assets/images/user-001.jpg" alt="">
+											</div>
+										</div>
+										<div class="email">julien@billiotte.fr</div>
+										<div class="name">Julien Miclo</div>
+										<div class="role">administrator</div>
+										<div class="created_at">12/04/2019 20:34</div>
+										<div class="ip">82.226.104.119</div>
+									</div>
+									<div class="item sleeped">
+										<div class="status noshrink"></div>
+										<div class="avatar noshrink">
+											<div class="user-avatar">
+												<img src="assets/images/user-001.jpg" alt="">
+											</div>
+										</div>
+										<div class="email">julien@billiotte.fr</div>
+										<div class="name">Julien Miclo</div>
+										<div class="role">administrator</div>
+										<div class="created_at">12/04/2019 20:34</div>
+										<div class="ip">82.226.104.119</div>
+									</div>
+									<div class="item sleeped">
+										<div class="status noshrink"></div>
+										<div class="avatar noshrink">
+											<div class="user-avatar">
+												<img src="assets/images/user-001.jpg" alt="">
+											</div>
+										</div>
+										<div class="email">julien@billiotte.fr</div>
+										<div class="name">Julien Miclo</div>
+										<div class="role">administrator</div>
+										<div class="created_at">12/04/2019 20:34</div>
+										<div class="ip">82.226.104.119</div>
+									</div>
+								</div>
+
+							</div>
 						</div>
 					</div>
 
-					<div class="module-container">
-						<div class="module-head">
-							<h2 class="module-title">CRM - Management System</h2>
-							<div class="module-actions">
-								<a href="#" class="item"><i class="material-icons">cloud_download</i></a>
-								<button class="item"><i class="material-icons">more_horiz</i></button>
-							</div>
-						</div>
-						<div class="module-content">
-							<p>This's a conceptual CRM PROJECT. It helps users to better manage the teams, projects & clients, generate reports and keep them up to date.</p>
-							<button class="button">S'inscrire avec une adresse e-mail</button>
-						</div>
-					</div>
-
-					<div class="module-container">
-						<div class="module-head">
-							<h2 class="module-title">New project</h2>
-							<div class="module-actions">
-								<button class="item"><i class="material-icons">more_horiz</i></button>
-							</div>
-						</div>
-						<div class="module-content">
-							<div class="inputs">
-								<div class="input text success">
-									<label for="">Title</label>
-									<input type="text" name="" value="">
-								</div>
-								<div class="input text error">
-									<label for="">Title</label>
-									<input type="text" name="" value="">
+					<div class="modules-row">
+						<div class="module-container">
+							<div class="module-head">
+								<h2 class="module-title">New project</h2>
+								<div class="module-actions">
+									<button class="item"><i class="material-icons">more_horiz</i></button>
 								</div>
 							</div>
-							<div class="inputs">
-								<div class="input text">
-									<label for="">Subdomain</label>
-									<div class="input-group append success">
+							<div class="module-content">
+								<div class="inputs">
+									<div class="input text success">
+										<label for="">Title</label>
 										<input type="text" name="" value="">
-										<div class="input-text">.domain.io</div>
+									</div>
+									<div class="input text error">
+										<label for="">Title</label>
+										<input type="text" name="" value="">
+									</div>
+								</div>
+								<div class="inputs">
+									<div class="input text">
+										<label for="">Subdomain</label>
+										<div class="input-group append success">
+											<input type="text" name="" value="">
+											<div class="input-text">.domain.io</div>
+										</div>
+									</div>
+									<div class="input text">
+										<label for="">Subdomain</label>
+										<div class="input-group append error">
+											<input type="text" name="" value="">
+											<div class="input-text">.domain.io</div>
+										</div>
 									</div>
 								</div>
 								<div class="input text">
-									<label for="">Subdomain</label>
-									<div class="input-group append error">
+									<label for="">Url</label>
+									<div class="input-group prepend">
+										<div class="input-text">http://</div>
 										<input type="text" name="" value="">
-										<div class="input-text">.domain.io</div>
+									</div>
+								</div>
+								<div class="input text">
+									<label for="">Collaborators</label>
+									<input type="text" name="" value="">
+								</div>
+								<div class="input textarea">
+									<label for="">Description</label>
+									<textarea></textarea>
+								</div>
+
+								<div class="inputs text">
+									<div class="input">
+										<label for="">Title</label>
+										<input type="text" name="" value="">
+									</div>
+									<div class="input">
+										<label for="">Title 2</label>
+										<input type="text" name="" value="">
+									</div>
+									<div class="input">
+										<label for="">Title 3</label>
+										<input type="text" name="" value="">
 									</div>
 								</div>
 							</div>
-							<div class="input text">
-								<label for="">Url</label>
-								<div class="input-group prepend">
-									<div class="input-text">http://</div>
-									<input type="text" name="" value="">
-								</div>
-							</div>
-							<div class="input text">
-								<label for="">Collaborators</label>
-								<input type="text" name="" value="">
-							</div>
-							<div class="input textarea">
-								<label for="">Description</label>
-								<textarea></textarea>
-							</div>
-
-							<div class="inputs text">
-								<div class="input">
-									<label for="">Title</label>
-									<input type="text" name="" value="">
-								</div>
-								<div class="input">
-									<label for="">Title 2</label>
-									<input type="text" name="" value="">
-								</div>
-								<div class="input">
-									<label for="">Title 3</label>
-									<input type="text" name="" value="">
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="module-container">
-						<div class="module-head">
-							<h2 class="module-title">Agenda</h2>
-							<div class="module-actions">
-								<button class="item"><i class="material-icons">more_horiz</i></button>
-							</div>
-						</div>
-						<div class="module-content">
-							
 						</div>
 					</div>
 
@@ -160,6 +317,8 @@
 		</main>
 	</div>
 
+	<script src="assets/javascripts/jquery.min.js" charset="utf-8"></script>
+	<script src="assets/libraries/select2/select2.min.js" charset="utf-8"></script>
 	<script src="assets/javascripts/master.js" charset="utf-8"></script>
 </body>
 </html>
