feat(list): add list module

--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
 							</div>
 						</div>
 					</div>
+
 					<div class="modules-row">
 						<div class="module-container">
 							<div class="module-head">
@@ -183,7 +184,7 @@
 							</div>
 							<div class="module-content">
 
-								<div class="wrap-list">
+								<div class="wrap-list users-list">
 									<div class="item logged">
 										<div class="status noshrink"></div>
 										<div class="avatar noshrink">
@@ -235,6 +236,45 @@
 										<div class="role">administrator</div>
 										<div class="created_at">12/04/2019 20:34</div>
 										<div class="ip">82.226.104.119</div>
+									</div>
+								</div>
+
+							</div>
+						</div>
+					</div>
+
+					<div class="modules-row">
+						<div class="module-container">
+							<div class="module-head">
+								<h2 class="module-title">Projects</h2>
+								<div class="module-actions">
+									<a href="" class="button">create new project</a>
+									<button class="item"><i class="material-icons">more_horiz</i></button>
+								</div>
+							</div>
+							<div class="module-content">
+
+								<div class="wrap-list projects-list">
+									<div class="item active">
+										<div class="status noshrink"></div>
+										<div class="email">12000</div>
+										<div class="name">Powder tart muffin</div>
+										<div class="domaine">cpcake donut sweet</div>
+										<div class="created_at">12/04/2019 20:34</div>
+									</div>
+									<div class="item active">
+										<div class="status noshrink"></div>
+										<div class="email">12020</div>
+										<div class="name">Powder tart muffin</div>
+										<div class="domaine">cpcake donut sweet</div>
+										<div class="created_at">12/04/2019 20:34</div>
+									</div>
+									<div class="item close">
+										<div class="status noshrink"></div>
+										<div class="email">12100</div>
+										<div class="name">Powder tart muffin</div>
+										<div class="domaine">cpcake donut sweet</div>
+										<div class="created_at">12/04/2019 20:34</div>
 									</div>
 								</div>
 
